force-app/main/default/objects/fw1__Credit_Memo_Line__c/fw1__Credit_Memo_Line__c.object-meta.xml
<CustomObject>
    <label>Credit Memo Line</label>
    <nameField>
        <label>Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>