force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/DMS_Inv_line_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Inv_line_Id__c</fullName>
    <label>DMS Inv line Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>