force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/DMS_InvCost__c.field-meta.xml
<CustomField>
    <fullName>DMS_InvCost__c</fullName>
    <label>DMS InvCost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>