force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/DMS_project_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_project_Id__c</fullName>
    <label>DMS_project_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>