force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/DMS_qb_id_c__c.field-meta.xml
<CustomField>
    <fullName>DMS_qb_id_c__c</fullName>
    <label>DMS qb id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>