force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/External_Credit_Memo_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Credit_Memo_Id__c</fullName>
    <formula>fw1__Credit_Memo__r.External_Record_Id__c</formula>
    <label>External Credit Memo Id</label>
    <type>Text</type>
</CustomField>