force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/External_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Id__c</fullName>
    <formula>fw1__Product__r.External_Record_Id__c</formula>
    <label>External Product Id</label>
    <type>Text</type>
</CustomField>