force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/fw1__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Memo__c</fullName>
    <label>Credit Memo</label>
    <referenceTo>fw1__Credit_Memo__c</referenceTo>
    <relationshipLabel>Credit Memo Lines</relationshipLabel>
    <relationshipName>Credit_Memo_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>