force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/fw1__Item_Description__c.field-meta.xml
<CustomField>
    <fullName>fw1__Item_Description__c</fullName>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>