force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/fw1__Quantity__c.field-meta.xml
<CustomField>
    <fullName>fw1__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>