force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/fw1__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>fw1__Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>