force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/MS_qb_txnid__c.field-meta.xml
<CustomField>
    <fullName>MS_qb_txnid__c</fullName>
    <label>MS_qb_txnid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>