force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>fw1__Credit_Memo__r.Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>