force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/Program_Nest_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Nest_Unit_ID__c</fullName>
    <formula>fw1__Credit_Memo__r.Program_Nest_Unit_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Nest Unit ID</label>
    <type>Text</type>
</CustomField>