force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/Program_QB_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_QB_Class_Id__c</fullName>
    <formula>fw1__Credit_Memo__r.Program_QB_Class_Id__c</formula>
    <label>Program QB Class Id</label>
    <type>Text</type>
</CustomField>