force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/QB_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>QB_Account_Type__c</fullName>
    <label>QB Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BD – Bad Debt</fullName>
            </value>
            <value>
                <fullName>BC – Bank Charges</fullName>
            </value>
            <value>
                <fullName>FCEL – Foreign Currency Exchange Loss</fullName>
            </value>
            <value>
                <fullName>FT – Foreign Taxes</fullName>
            </value>
            <value>
                <fullName>OR – Other Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>