force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <formula>IF( ISNULL( fw1__Product__c)|| ISBLANK(fw1__Product__c) , TEXT( QB_Account_Type__c ), TEXT(fw1__Product__r.Revenue_Type__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Type</label>
    <type>Text</type>
</CustomField>