force-app/main/default/objects/fw1__Credit_Memo_Line__c/fields/Revenue_Type_picklist__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type_picklist__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C - Commission Revenue</fullName>
            </value>
            <value>
                <fullName>F - Fees (Accreditation)</fullName>
            </value>
            <value>
                <fullName>L - Lab Fees</fullName>
            </value>
            <value>
                <fullName>M - Misc./Other</fullName>
            </value>
            <value>
                <fullName>P - Professional Fees</fullName>
            </value>
            <value>
                <fullName>R - Reimbursable/Travel</fullName>
            </value>
            <value>
                <fullName>RN - Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>