force-app/main/default/objects/fw1__Credit_Memo_Line__c/validationRules/CLI_Price_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>CLI_Price_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>fw1__Unit_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>fw1__Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price cannot be a negative value</errorMessage>
</ValidationRule>